--- a/src/main/webapp/helloform.html
+++ b/src/main/webapp/helloform.html
@@ -1,25 +1,28 @@
-<!DOCTYPE html>
-<!--
+<!DOCTYPE html><<!--
 To change this license header, choose License Headers in Project Properties.
 To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Formulário de HelloWorld (usando o HelloServlet.java)</title>
+        <title>Formulário de HelloWorld (usando o HelloServlet.java))</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
-        <div>Formulário de HelloWorld (usando o HelloServlet.java)</div>
+        <div><h1>Formulário de HelloWorld</h1></div>
            <form action="alomundo" method="post">
            <br>Idioma: <input type="radio" name="lang" value="pt" checked> Português
            <input type="radio" name="lang" value="en"> Inglês
            <input type="radio" name="lang" value="fr"> Francês
-           <input type="radio" name="lang" value="de"> Alemão<br><br>
+           <input type="radio" name="lang" value="de"> Alemão
+           <input type="radio" name="lang" value="es"> Espanhol
+           <input type="radio" name="lang" value="it"> Italiano<br><br>
            Nome: <input type="text" name="nome"/><br><br>
-           <input type="submit" value="Cumprimentar"/>
+           <button type="submit" class="btn btn-light">Cumprimentar</button>
         </form>
 
     </body>
 </html>
+         
