--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,14 +6,18 @@ and open the template in the editor.
 -->
 <html>
     <head>
+    
         <title>Demo do Tópico 1</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
+    	<div><h1>Bem vindo ao demo ServletJava!</h1></div>
+    	<p>
         <div>Funcionalidades disponíveis:</div>
+        <p>
         <p>HelloServlet.java (Método GET) (<a href=".\alomundo?lang=pt&nome=Fulano">link</a>)</p>
         <p>Formulário de HelloWorld (usando o HelloServlet.java - Método POST) (<a href=".\helloform.html">link</a>)</p>
-        <p>Formulário de HelloWorld (usando o sayhello.jsp) (<a href=".\helloform2.html">link</a>)</p>
     </body>
 </html>
